--- a/src/components/navigation/Navigationitems/NavigationItem/NavigationItem.css
+++ b/src/components/navigation/Navigationitems/NavigationItem/NavigationItem.css
@@ -1,20 +1,15 @@
 .NavigationItem{
-    margin: 0;
+    margin: 10px 0;
     box-sizing: border-box;
-    display: flex;
-    height: 100%;
+    display: block;
     width: 100%;
-    align-items: center;
-
 
 }
 
 .NavigationItem a {
-    color: white;
+    color: brown;
     text-decoration: none;
-    height: 100%;
-    padding: 16px 10px;
-    border-bottom: 4px solid transparent;
+    width: 100%;
     box-sizing: border-box;
     display: block;
 }
@@ -22,7 +17,32 @@
 .NavigationItem a:hover,
 .NavigationItem a:active,
 .NavigationItem a.active{
-    background-color: lightcoral;
-    border-bottom: 4px solid dodgerblue;
-    color: white;
+    color: cadetblue;
+}
+
+@media (min-width: 500px) {
+    .NavigationItem{
+        margin: 0;
+        display: flex;
+        height: 100%;
+        width: auto;
+        align-items: center;
+    }
+
+    .NavigationItem a {
+        color: white;
+        height: 100%;
+        padding: 16px 10px;
+        border-bottom: 4px solid transparent;
+    }
+
+    .NavigationItem a:hover,
+    .NavigationItem a:active,
+    .NavigationItem a.active{
+        background-color: lightcoral;
+        border-bottom: 4px solid dodgerblue;
+        color: white;
+    }
+
+
 }
