--- a/src/components/UI/Input/Input.css
+++ b/src/components/UI/Input/Input.css
@@ -17,6 +17,9 @@
     background-color: white;
     font: inherit;
     padding: 6px 10px;
+    display: block;
+    width: 100% ;
+    box-sizing: border-box;
 
 }
 .InputElement:focus{
