--- a/src/components/UI/Input/Input.css
+++ b/src/components/UI/Input/Input.css
@@ -4,26 +4,29 @@
     box-sizing: border-box;
 }
 
-.Label{
+.Label {
     font-weight: bold;
     display: block;
-    margin-bottom: 8px ;
-
+    margin-bottom: 8px;
 }
 
-.InputElement{
+.InputElement {
     outline: none;
     border: 1px solid #ccc;
     background-color: white;
     font: inherit;
     padding: 6px 10px;
     display: block;
-    width: 100% ;
+    width: 100%;
     box-sizing: border-box;
-
 }
-.InputElement:focus{
+
+.InputElement:focus {
     outline: none;
     background-color: #ccc;
+}
 
+.Invalid {
+    border: 1px solid red;
+    background-color: #FDA49A;
 }
